# meus_filmes

./: .env.example  .gitignore  README.md  bugs.txt  docker-compose.dev.yml  docker-compose.yml  host.bat  host.sh  run_backup.bat  run_backup.sh
api-backend/: Dockerfile  README.md  app.py  extensions.py  models.py  openapi.yaml  pyproject.toml  requirements.txt  utils.py  wsgi.py
api-backend/api/: __init__.py  auth_routes.py  health_check_routes.py  list_routes.py  tmdb_proxy_routes.py  watched_routes.py
api-backend/docs/: auth.yaml  health.yaml  lists.yaml  schemas.yaml  tmdb.yaml  watched.yaml
api-backend/tests/: test_app.py  test_routes.py
frontend/: .gitignore  Dockerfile  README.md  index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: AdicionarLista.vue  GenreCarousel.vue  ListDetails.vue  MovieCard.vue  MovieDetails.vue  MovieList.vue  MovieLists.vue  MovieRecommendations.vue  PaginationControls.vue  PopularMovieCarousel.vue  WatchedCount.vue  WatchedList.vue  WatchedStats.vue
frontend/src/locales/: en.json  pt.json
frontend/src/pages/: Buscar.vue  GenreMovies.vue  Home.vue  Login.vue  PopularMoviesPage.vue  PublicList.vue  Recovery.vue  Register.vue  ResetPassword.vue
frontend/src/stores/: auth.js
frontend/src/utils/: api.js
nginx/: nginx.conf  nginx.dev.conf
